overflow fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,8 @@ header h1 {
 
 header #head-info {
 	float: left;
-	max-width: 70%;
+	max-width: 60%;
+	overflow: auto;
 }
 
 header {
